# DriftDetector

./: .env.example  .gitignore  ERROR_LOG.md  INTERVIEW_GUIDE.md  README.md  UI_DEPLOYMENT.md  generate_data.py  interview.md  prd.md  pyproject.toml  setup.md  summary.md
.github/workflows/: azure-static-web-apps.yml  build-deploy.yml  github-pages.yml  infra-deploy.yml  model-training.yml
charts/pred-maint/: Chart.yaml  values.yaml
charts/pred-maint/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: DATA_SETUP.md  QUICKSTART.md
features/: README.md  definitions.py  feature_store.yaml
infra/: README.md  main.tf  outputs.tf  variables.tf
scripts/: simulator.py
src/: quick_start.py
src/data/: README.md  __init__.py  ingestion.py  requirements.txt  scheduler.py
src/serving/: Dockerfile  drift_service.py  main.py  models.py  requirements.txt
src/training/: pipeline.yml  requirements.txt  train.py
tests/: test_drift.py  test_inference.py
ui/: README.md  app.js  config.js  index.html  staticwebapp.config.json
