[tool.poetry]
name = "azure-pred-maint-ops"
version = "0.1.0"
description = "Predictive Maintenance with Edge-to-Cloud Drift Detection"
authors = ["MLOps Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Azure ML SDK
azure-ai-ml = "^1.12.0"
azure-identity = "^1.15.0"
azureml-mlflow = "^1.53.0"
mlflow = "^2.9.0"

# Feature Store
feast = {extras = ["redis"], version = "^0.35.0"}

# ML Libraries
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.11.0"

# Model Serving
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

# Drift Detection
evidently = "^0.4.10"

# Model Optimization
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
skl2onnx = "^1.16.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
click = "^8.1.7"
requests = "^2.31.0"

# Monitoring
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
